flux/apps/speedtest-tracker/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: speedtest-tracker
  name: speedtest-tracker
  namespace: extra-tools
spec:
  ports:
  - port: 80
  selector:
    app: speedtest-tracker
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: extra-tools
spec:
  ports:
  - port: 5432
  selector:
    app.kubernetes.io/name: postgres
  type: ClusterIP
